# tjson

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  npm-README.md  test-all.sh
.github/workflows/: ci.yml  release.yml
docs/: c-api.md
include/: tjson.h
src/: de.rs  document.rs  error.rs  ffi.rs  lib.rs  number.rs  options.rs  parse.rs  render.rs  spanned.rs  tree.rs  util.rs  value.rs  wasm.rs
src/js/: value_transport.js
tests/: capi_smoke.rs  deserialize.rs  file_tests.rs  wasm_boundary.rs
tests/capi/: roundtrip.c  run.sh
