[package]
name = "tjson-rs"
version = "0.7.0"
edition = "2024"
authors = ["R.F. Anthracite <rfa@rfanth.com>"]
description = "Text JSON (TJSON) - a readability optimized, round trip compatible alternative to JSON"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/rfanth/tjson"
homepage = "https://textjson.com"
# crates.io caps this at 5 keywords, <=20 chars each; wasm-pack copies them
# into the generated npm package.json, so both registries share one source.
keywords = ["json", "text", "roundtrip", "lossless", "readable"]
exclude = ["tests/fixtures"]

[lib]
name = "tjson"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
# musl compatibility is important, but compiles to WebAssembly via wasm-pack, so "cdylib" above

[[bin]]
name = "tjson"
path = "src/bin/tjson.rs"
# The CLI converts through the public From<serde_json::Value> impls (both
# directions) and pretty-prints via serde_json, so it needs the feature.
# Library consumers with default-features = false never build this target.
required-features = ["serde_json"]

# The C ABI smoke test (clang + AddressSanitizer against the real cdylib).
# Gated so plain `cargo test` ignores it; `cargo test --features capi` runs
# the whole battery including this.
[[test]]
name = "capi_smoke"
required-features = ["capi"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# For tests/wasm_boundary.rs, run by `wasm-pack test --node` (test-all.sh
# stage 4) — exercises the JS-boundary behavior in a real JS engine.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
terminal_size = "0.4"

[features]
default = ["serde_json"]
serde_json = []
# C ABI (FFI) bindings — see src/ffi.rs. Off by default. When off, the whole
# crate keeps #![forbid(unsafe_code)] (enforced in lib.rs, not here, so it can
# be made conditional on this feature). serde_ignored is used only by the C ABI
# to reject unknown option fields; it is not compiled into any other build.
capi = ["dep:serde_ignored"]

# Fat LTO + single codegen unit: maximum cross-crate optimization for release
# artifacts (CLI, C ABI cdylib, npm wasm). The cost is release link time only —
# dev builds and `cargo test` are unaffected. Runtime gains are modest; the real
# win is wasm size, which is download + instantiation time for the npm package
# (and is base64-inflated 4/3 in the zero-setup ./web entry).
[profile.release]
lto = true
codegen-units = 1

[dependencies]
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
serde_ignored = { version = "0.1", optional = true }
unicode-general-category = "1.0"

# For tests/deserialize.rs: the differential rig drives serde derive and the
# serde_json oracle from an integration-test crate, which only sees dev-dependencies.
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

